# Mara

./: .gitignore  AGENTS.md  README.md  TODO  main.py  mara.py  mara.yaml  mara_module.py  mara_recall.py  mara_simple.py  mara_symbols.py  pltmain.py  pyproject.toml  requirements.txt
cfg/: _generic.py  basic.py  dump.py  generic.py  peg.py  plot.py
doc/: api_balancesheet.txt  api_cashflow.txt  api_fina_indicator.txt  api_income.txt  prd.md
mara/: __init__.py  __main__.py  app.py  config.py  constants.py  data_fetcher.py  data_processor.py  date_utils.py  excel_exporter.py  indicator_registry.py  logger.py  main.py  mara.py  output.py  plotter.py  plugin_loader.py  query_options.py  stock_selector.py  tushare_client.py
modules/: _generic.py  basic.py  dump.py  generic.py  ocfps.py  peg.py  recall.py
src/mara/: app.py  constants.py  data_fetcher.py  data_processor.py  date_utils.py  excel_exporter.py  indicator_registry.py  main.py  output.py  plotter.py  plugin_loader.py  stock_selector.py  tushare_client.py
tests/: test_main.py
utils/: rc.py  tushare.py
