[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mara"
version = "0.1.2"
description = "Stock analysis CLI via Tushare"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "PyYAML==6.0.3",
    "tushare==1.4.24",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
mara = "mara.main:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = ["B", "E", "F", "I", "UP"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
